integrated resources
